--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4" data-aos="fade-right"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><img src="Untitled design (12).png" style="font-size: 94px;padding-top: 9px;"></span>
+                <div class="col-md-4" data-aos="fade-right"><span class="fa-stack fa-4x"><img src="Untitled design (12).png" style="font-size: 94px"></span>
                     <h4 class="section-heading">Wood Works</h4>
                     <p class="text-muted">All the interior designs were made of wood.</p>
                 </div>
