--- a/index.html
+++ b/index.html
@@ -52,17 +52,11 @@
                     <h4 class="section-heading">Wood Works</h4>
                     <p class="text-muted">All the interior designs were made of wood.</p>
                 </div>
-                <div class="col-md-4" data-aos="fade-right"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" class="fa-stack-1x fa-inverse" style="font-size: 100px;padding-bottom: 0px;padding-top: 12px;margin-top: 12px;">
-                            <path d="M10 5H14V19H10V5Z" fill="currentColor"></path>
-                            <path d="M5 19V10H9V19H5Z" fill="currentColor"></path>
-                            <path d="M7 5C5.89543 5 5 5.89543 5 7C5 8.10457 5.89543 9 7 9C8.10457 9 9 8.10457 9 7C9 5.89543 8.10457 5 7 5Z" fill="currentColor"></path>
-                            <path d="M15 5H19V9H15V5Z" fill="currentColor"></path>
-                            <path d="M19 10H15V14H19V10Z" fill="currentColor"></path>
-                        </svg></span>
+                <div class="col-md-4" data-aos="fade-right"><span class="fa-stack fa-4x"><img src="Untitled design (13).png"></span>
                     <h4 class="section-heading">Best Designs</h4>
                     <p class="text-muted">We make the best interior designs for your house</p>
                 </div>
-                <div class="col-md-4" data-aos="fade-right"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-home fa-stack-1x fa-inverse" style="font-size: 70px;"></i></span>
+                <div class="col-md-4" data-aos="fade-right"><span class="fa-stack fa-4x"><img src="Untitled design (14).jpg"></span>
                     <h4 class="section-heading">Home Ceilings</h4>
                     <p class="text-muted">We make ceiling for your home at affordable prices</p>
                 </div>
