--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h4 class="section-heading">Best Designs</h4>
                     <p class="text-muted">We make the best interior designs for your house</p>
                 </div>
-                <div class="col-md-4" data-aos="fade-right"><span class="fa-stack fa-4x"><img src="Untitled design (14).jpg"></span>
+                <div class="col-md-4" data-aos="fade-right"><span class="fa-stack fa-4x"><img src="Untitled design (14).png"></span>
                     <h4 class="section-heading">Home Ceilings</h4>
                     <p class="text-muted">We make ceiling for your home at affordable prices</p>
                 </div>
